# p21_fatsapi

./: config.py  main.py  pyproject.toml  todo
apps/: admin.py
apps/models/: db.py  products.py
apps/routers/: routers.py
templates/: detailed-user.html  users-list.html
templates/apps/products/: product-detail.html  product-list.html
